# dhis-datagen

./: .gitignore  README.md  datagen.py  db_config.json  events.json  generate_table_config.py  pyproject.toml  sample-model.json
