[tool.poetry]
name = "dhis2-datagen"
version = "0.0.1"
description = "Mass data generator for the DHIS2 project"
authors = ["Luciano Fiandesio <luciano@dhis2.org>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
faker = "^30.8.0"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
